* tests/link-order2.at: New test to show one case where ordering of depdepls on the command line matters. * Makefile.am: Adjust.

--- a/Makefile.am
+++ b/Makefile.am
@@ -403,6 +403,7 @@ TESTSUITE_AT	= tests/testsuite.at \
 		  tests/inherited_flags.at \
 		  tests/convenience.at \
 		  tests/link-order.at \
+		  tests/link-order2.at \
 		  tests/fail.at \
 		  tests/shlibpath.at \
 		  tests/static.at \
