--- a/tests/tagdemo/configure.ac
+++ b/tests/tagdemo/configure.ac
@@ -1,5 +1,5 @@
 ## Process this file with autoconf to create configure. -*- autoconf -*-
-# Copyright (C) 2001, 2003, 2004, 2005 Free Software Foundation, Inc.
+# Copyright (C) 2001, 2003, 2004, 2005, 2007 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -69,19 +69,6 @@ using namespace std;
 AC_LANG_POP([C++])
 
 
-# As of the writing of this demo, GNU Autoconf's AC_OBJEXT and
-# AC_EXEEXT macros only works for C compilers!
-# Libtool's setup macro calls AC_OBJEXT and AC_EXEEXT without setting
-# the test language to C.  We do it before any libtool setup macros are
-# called so that the proper values are cached beforehand.  We also do
-# it before any linker flags (LDFLAGS) are set so that C++ specific
-# ones don't break the tests.
-AC_LANG_PUSH([C])
-AC_OBJEXT
-AC_EXEEXT
-AC_LANG_POP
-
-
 ## ----------------------- ##
 ## Libtool initialisation. ##
 ## ----------------------- ##
@@ -89,12 +76,6 @@ AC_LANG_POP
 # Set the test language to C++.
 AC_LANG([C++])
 LT_INIT
-
-
-## ------------------------------ ##
-## C headers required by tagdemo. ##
-## ------------------------------ ##
-AC_CHECK_HEADERS([math.h])
 
 
 ## ------------------------------ ##
