--- a/tests/cdemo/configure.ac
+++ b/tests/cdemo/configure.ac
@@ -1,5 +1,5 @@
 ## Process this file with autoconf to create configure. -*- autoconf -*-
-# Copyright (C) 2001, 2003, 2004, 2005 Free Software Foundation, Inc.
+# Copyright (C) 2001, 2003, 2004, 2005, 2007 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -43,12 +43,6 @@ AC_PROG_CC
 ## ----------------------- ##
 LT_INIT
 AC_SUBST([LIBTOOL_DEPS])
-
-
-## ---------------------------- ##
-## C headers required by cdemo. ##
-## ---------------------------- ##
-AC_CHECK_HEADERS([math.h])
 
 
 ## ---------------------------- ##
