--- a/libltdl/Makefile.inc
+++ b/libltdl/Makefile.inc
@@ -1,6 +1,6 @@
-## Makefile.am -- Process this file with automake to produce Makefile.in
+## Makefile.inc -- includable Makefile.am snippet
 ##
-## Copyright (C) 2003, 2004, 2005 Free Software Foundation, Inc.
+## Copyright (C) 2003, 2004, 2005, 2007 Free Software Foundation, Inc.
 ##
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
