--- a/Makefile.am
+++ b/Makefile.am
@@ -438,6 +438,7 @@ TESTSUITE_AT	= tests/testsuite.at \
 		  tests/static.at \
 		  tests/export.at \
 		  tests/search-path.at \
+		  tests/indirect_deps.at \
 		  tests/destdir.at \
 		  tests/old-m4-iface.at \
 		  tests/am-subdir.at \
