* tests/f77demo/configure.ac [--with-dist]: New option.  Skip most Fortran checks when given. * tests/fcdemo/configure.ac [--with-dist]: Likewise. * Makefile.am (@DIST_MAKEFILE_LIST@): Pass --with-dist. Reported by Benoit Sigoure <tsuna@lrde.epita.fr>.

--- a/Makefile.am
+++ b/Makefile.am
@@ -109,7 +109,7 @@ configure-subdirs distdir: $(DIST_MAKEFILE_LIST)
 	dir=`echo $@ | sed 's,^[^/]*$$,.,;s,/[^/]*$$,,'`; \
 	test -d $$dir || mkdir $$dir || exit 1; \
 	abs_srcdir=`$(lt__cd) $(srcdir) && pwd`; \
-	(cd $$dir && $$abs_srcdir/$$dir/configure) || exit 1
+	(cd $$dir && $$abs_srcdir/$$dir/configure --with-dist) || exit 1
 
 
 # ---------- #
