--- a/Makefile.am
+++ b/Makefile.am
@@ -447,6 +447,7 @@ TESTSUITE_AT	= tests/testsuite.at \
 		  tests/am-subdir.at \
 		  tests/lt_dlexit.at \
 		  tests/lt_dladvise.at \
+		  tests/need_lib_prefix.at \
 		  tests/standalone.at \
 		  tests/subproject.at \
 		  tests/nonrecursive.at \
