--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 # Process this file with autoconf to create configure. -*- autoconf -*-
 
-#   Copyright (C) 2001, 2004, 2005 Free Software Foundation, Inc.
+#   Copyright (C) 2001, 2004, 2005, 2008 Free Software Foundation, Inc.
 #   Written by Gary V. Vaughan, 2001
 #
 #   This file is part of GNU Libtool.
@@ -181,7 +181,7 @@ AC_PROG_CPP
 ## Libtool initialisation. ##
 ## ----------------------- ##
 LT_INIT([dlopen win32-dll])
-LTDL_INIT([libltdl])
+_LTDL_SETUP
 
 # Enable all the language support we can
 LT_LANG(C++)
