Backport darwin support reorganization from HEAD. * libtool.m4 [darwin]: Check for nmedit and dsymutil with AC_CHECK_TOOL, use -single_module by default (can be turned off with the -multi-module linker flag or by setting the LT_MULTI_MODULE environment variable. If it is available use -exported_symbols_list instead of nmedit to remove symbols. * ltmain.in [darwin]: Use -single_module by default.

--- a/ltmain.in
+++ b/ltmain.in
@@ -1168,6 +1168,7 @@ EOF
     thread_safe=no
     vinfo=
     vinfo_number=no
+    single_module="${wl}-single_module"
 
     func_infer_tag $base_compile
 
@@ -1650,6 +1651,11 @@ EOF
 	compiler_flags="$compiler_flags $arg"
 	compile_command="$compile_command $arg"
 	finalize_command="$finalize_command $arg"
+	continue
+	;;
+
+      -multi_module)
+	single_module="${wl}-multi_module"
 	continue
 	;;
 
