--- a/tests/fcdemo/Makefile.am
+++ b/tests/fcdemo/Makefile.am
@@ -63,3 +63,13 @@ libtool: $(LIBTOOL_DEPS)
 
 .f90.lo:
 	$(LTFCCOMPILE) -c -o $@ $(FCFLAGS_f90) $<
+
+# Workaround a bug in Autoconf-2.61 and earlier that don't clean up
+# file droppings left by many compilers:
+distclean-local:
+	ac_files="a.out.* a.exe.* a_out.exe.* b.out.* conftest.*"; \
+	for ac_file in $$ac_files; do \
+	  case $$ac_file in \
+	    *.xcoff | *.tds | *.d | *.pdb | *.xSYM | *.bb | *.bbg | *.map | *.inf | *.dSYM ) rm -rf $$ac_file ;; \
+	  esac; \
+	done
